Fix previous review

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -218,9 +218,17 @@
     "\n",
     "In MADDPG, we train two separate agents, and the agents need to collaborate (like don’t let the ball hit the ground) and compete (like gather as many points as possible). Each agent’s critic is trained using the observations and actions from both agents , whereas each agent’s actor is trained using just its own observations.\n",
     "\n",
-    "#### 4.2 Training\n",
+    "\n",
+    "#### 4.2 Architecture\n",
+    "\n",
+    "Two fully connected hidden layers with ReLu activations for both the actor and the critic. I am using 400/300 units for the two hidden layers in this project (I tested with different number of units with similar results). The main improvement to the agent came from the introduction of batch normalization in the actor and critic networks.\n",
+    "\n",
+    "\n",
+    "#### 4.3 Training\n",
     "\n",
     "After some experimentation, finally I have used the following hyperparameters:\n",
+    "\n",
+    "From ddpg_agent.py\n",
     "\n",
     "```\n",
     "BUFFER_SIZE = int(1e6)  # replay buffer size\n",
@@ -232,6 +240,13 @@
     "WEIGHT_DECAY = 0        # L2 weight decay\n",
     "EPSILON = 1.0           # for epsilon in the noise process (act step)\n",
     "EPSILON_DECAY = 1e-6\n",
+    "```\n",
+    "\n",
+    "From maddpg_agent.py\n",
+    "```\n",
+    "BUFFER_SIZE = int(1e6)          # replay buffer size   \n",
+    "BATCH_SIZE = 512                # minibatch size   \n",
+    "UPDATE_EVERY = 2                # weight update frequency \n",
     "```"
    ]
   },
@@ -274,7 +289,7 @@
     "# config settings\n",
     "config = Config()\n",
     "config.update_every = 2\n",
-    "config.batch_size = 256\n",
+    "config.batch_size = 512\n",
     "config.buffer_size = int(1e6)\n",
     "config.discount = 0.99\n",
     "config.tau = 2e-3\n",
@@ -379,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 Training plot\n",
+    "#### 4.4 Training plot\n",
     "The agent was able to solve the environment by achieving score of 30.0 over 100 consecutive episodes after 165 episodes."
    ]
   },
